Fixed text cut off for very big font sizes, and added upper and lower limits for the font size

--- a/app/javascript/stylesheets/pages/chapter.scss
+++ b/app/javascript/stylesheets/pages/chapter.scss
@@ -122,6 +122,9 @@
   .arabic {
     font-size: 30px;
     line-height: normal;
+    word-spacing: 55px;
+    display: flex;
+    flex-flow: row wrap;
   }
 }
 
